# master-terminal

./: .gitignore  CLAUDE.md  CONTEXT.md  README.md  URUCHOM.bat  pyproject.toml
data/: calendar_events.json
master/: __init__.py  config.py  main.py
master/core/: __init__.py  decision.py  edge_lookup.py  gates.py  mtf.py  pipeline.py  plan.py  regime.py  setup_grader.py  sizer.py  verdict.py  wfa.py
master/data/: __init__.py  calendar.py  cot.py  ea_bridge.py  feature_store.py
master/journal/: __init__.py  db.py  importer.py  stats.py  trade.py
master/monitor/: __init__.py  psych.py  tail.py
master/ui/: __init__.py  app.py
scripts/: decision.py  inspect_ea_db.py
tests/: test_smoke.py
