[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "master-terminal"
version = "0.1.0"
description = "Decision layer over EA Terminal — Strategist that filters signals through 15 trading classics"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Marcin" }]

dependencies = [
    "pandas>=2.0",
    "numpy>=1.26",
    "python-dateutil>=2.8",
    # UI — pick one in master/ui/app.py:
    "dash>=2.17",            # spójne z EA Terminal
    "plotly>=5.20",
    # alternatywnie (lżejsze):
    # "streamlit>=1.32",
    # data:
    "pyarrow>=14",           # parquet
    "requests>=2.31",        # CFTC, FRED jeśli niezależnie od EA
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-cov",
    "ruff",
    "mypy",
]

[project.scripts]
master = "master.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["master*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
